samples/_failures_safe/1761607579_b1d97c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eda0a65d.c: In function ‘main’:
./samples/SAFE/__tmp_eda0a65d.c:126:13: error: expected expression at end of input
  126 |             if (scanf("%d", &matrix2[i][j]) != 1)
      |             ^~
./samples/SAFE/__tmp_eda0a65d.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eda0a65d.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eda0a65d.c:126:13: error: expected declaration or statement at end of input
